--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # For local development (when running backend with uvicorn)
-REACT_APP_API_URL=http://f1b-service.utils.svc.cluster.local:8000
+REACT_APP_API_URL=https://f1b-service.utils.svc.cluster.local:8000
 
 # For Docker (using docker-compose
 # REACT_APP_API_URL=http://backend:8000
