--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # For local development (when running backend with uvicorn)
 # REACT_APP_API_URL=https://f1b-service.utils.svc.cluster.local:8000
-REACT_APP_API_URL=https://f1b.sso.integ.internal.svc.movingtech.net
+# REACT_APP_API_URL=https://f1b.sso.integ.internal.svc.movingtech.net
 
 # For Docker (using docker-compose
 # REACT_APP_API_URL=http://backend:8000
